git commit -m "class changes"

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="download">
             <img class="photo1" src="\image\download.jpg" alt="loading image">
 
-            <div class="title">
+            <div class="heading">
                 <h1><strong>HI TAWANDA!</strong></h1>
                 <p>Check your most recent Freebs!</p>
 
